--- a/oscar/src/css/style.css
+++ b/oscar/src/css/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: lightblue;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
       "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
       sans-serif;
@@ -14,10 +15,13 @@ body {
   }
 
 .App{
-    background-color: lightblue;
     width: 922px;
     margin: auto;
+    background-color: #fff;
+    border: 1px solid rgb(43, 55, 63);
 }
+
+/* Navbar */
 
 nav{
   display: flex;
@@ -56,4 +60,69 @@ nav li a{
 nav li a:hover{
   color: #fff;
   background: rgb(25, 11, 87);
+}
+
+/* Home */
+
+.main-content{
+  width: 90%;
+  margin: auto;
+  padding-bottom: 50px;
+}
+
+.main-content h2{
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.home-image{
+  width: 100%;
+  height: 500px;
+  background-image: url("https://drraa3ej68s2c.cloudfront.net/wp-content/uploads/2019/02/24211315/0f4be43c4171da2bfcd53c97632fc0c8c1c86f858206393bcf7598f2b2ac6da7-585x585.jpg");
+  background-size: cover;
+  margin-bottom: 50px;
+  transition: all 0.3s ease-in-out;
+}
+
+.home-image:hover{
+  /* background-image: url("http://899thewave.fm/wp-content/uploads/sites/4/2019/02/oscars-winners.jpg"); */
+  /* background-image: url("https://drraa3ej68s2c.cloudfront.net/wp-content/uploads/2019/02/24211315/0f4be43c4171da2bfcd53c97632fc0c8c1c86f858206393bcf7598f2b2ac6da7-585x585.jpg"); */
+  transform: scale(1.05);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.thumbnail-container{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
+  width: 100%;
+}
+
+.home-thumbnail-1,
+.home-thumbnail-2,
+.home-thumbnail-3{
+  background-size: cover;
+  width: 200px;
+  height: 100px;
+  transition: all 0.3s ease-in-out;
+}
+
+.home-thumbnail-1{
+  background-image:  url("https://drraa3ej68s2c.cloudfront.net/wp-content/uploads/2019/02/24175252/918a6250c35ca34ce69592ed53e293670d051a7f985b6464a7e3c8531e5b0672-770x443.jpg")
+}
+
+.home-thumbnail-1:hover,
+.home-thumbnail-2:hover,
+.home-thumbnail-3:hover{
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.20);
+}
+
+.home-thumbnail-2{
+  background-image: url("https://drraa3ej68s2c.cloudfront.net/wp-content/uploads/2019/02/24175813/c9d895b04f37e61a38dc4c01fce36de791814c2380102e86d950e1d660a3cf84-770x443.jpg")
+}
+
+.home-thumbnail-3{
+  background-image: url("https://images.gulfnews.com/201902/190225%20uae%20wins%20oscar_resources1.jpg")
 }
