--- a/oscar/src/css/style.css
+++ b/oscar/src/css/style.css
@@ -147,14 +147,26 @@ nav li a:hover{
   height: 250px;
   background-size: cover;
   border: 0.3px solid #999;
+  transition: all 0.2s ease-in-out;
+}
+
+.actor-image:hover{
+  transform: scale(1.05);
+  transition: all 0.2s ease-in-out;
 }
 
 .back{
-  display: inline;
+  display: inline-block;
   padding: 5px 10px;
   background: #333;
   margin: 5px;
   border-radius: 5px;
   color: #fff;
   text-decoration: none;
+}
+
+.image-profile{
+  width: 100%;
+  height: 500px;
+  background-size: cover;
 }
